crates/reap-pm-live/tests/ui/aged_lane_failure_is_move_only.rs
use reap_pm_live::PmServiceTurnError;

fn replay(failure: PmServiceTurnError) {
    let _first = failure;
    let _second = failure;
}

fn main() {}
